Add pageable for friendship